syntax = "proto3";

package weather;

option go_package = "github.com/g0shi4ek/grcp_weather/gen/go;gen";

import "google/protobuf/timestamp.proto";

service WeatherService {
  rpc GetCurrentWeather (stream CityRequest) returns (stream WeatherData);
  rpc GetHistoryWeather (CityRequest) returns (WeatherHistoryData);
}

message WeatherData {
  string city = 1; 
  google.protobuf.Timestamp time = 2;
  float temperature = 3;
  float feels_like = 4;
  int32 humidity = 5;
  float speed = 6;
}

message CityRequest {
  string city = 1;
}

message WeatherHistoryData{
  repeated WeatherData data = 1;
}
